--- a/src/utilities/_divider.sass
+++ b/src/utilities/_divider.sass
@@ -3,6 +3,6 @@
 
 hr
   border: 0
-  border-top: .1rem solid $gray-light
+  border-top: .1rem solid $gray-lightest
   margin-bottom: 3.5rem
   margin-top: 3rem
