--- a/src/base/_base.sass
+++ b/src/base/_base.sass
@@ -15,7 +15,7 @@ html
 body
   margin: 0
   background: $body-background-color
-  color: $text-color
+  color: $core-text-color
   font-size: 1.6rem
 
 article,
@@ -26,3 +26,12 @@ header,
 hgroup,
 section
   display: block
+
+pre,
+blockquote,
+dl,
+table,
+ul,
+ol,
+form
+  margin-bottom: 2.5rem
