--- a/src/components/_blockquote.sass
+++ b/src/components/_blockquote.sass
@@ -7,3 +7,6 @@ blockquote
   color: $gray-light
   font-style: italic
   border-left: .5rem solid $gray-lightest
+
+  cite
+    color: $gray-lighter
