--- a/src/components/_form.sass
+++ b/src/components/_form.sass
@@ -10,13 +10,14 @@ input[type='text'],
 input[type='url'],
 textarea,
 select
-  appearance: none // Removes awkward default styles on some inputs for iOS
+  margin-bottom: 1.5rem
+  appearance: none
   background-color: transparent
   border: .1rem solid $gray-lightest
   border-radius: $global-radius
   box-shadow: none
   height: 3.8rem
-  padding: .6rem 1rem // The .6rem vertically centers text on FF, ignored by Webkit
+  padding: .6rem 1rem
   width: 100%
 
   &:focus
