--- a/src/ghast.sass
+++ b/src/ghast.sass
@@ -6,7 +6,7 @@
 @import base/reset
 
 // Important functions to be used in other files.
-@import utilities/functions
+@import base/functions
 
 // Import core components.
 @import base/color
@@ -17,8 +17,8 @@
 @import base/base
 @import base/grid
 @import base/images
-@import base/spacing
 @import base/typography
+@import components/blank
 @import components/blockquote
 @import components/button
 @import components/card
