--- a/src/base/_variables.sass
+++ b/src/base/_variables.sass
@@ -12,7 +12,7 @@ $global-lineheight: 1.65
 $global-radius: .3rem
 
 $body-background-color: $white
-$body-font-family: -apple-system, '.SFNSText-Regular', 'San Francisco', 'Roboto', 'Segoe UI', 'Helvetica Neue', 'Lucida Grande', 'Oxygen', 'Ubuntu', 'Cantarell', sans-serif
+$body-font-family: -apple-system, BlinkMacSystemFont, 'San Francisco', 'Roboto', 'Segoe UI', 'Helvetica Neue', 'Lucida Grande', 'Oxygen', 'Ubuntu', 'Cantarell', sans-serif
 $monospace-font-family: 'Menlo', 'Consolas', 'Bitstream Vera Sans Mono', 'DejaVu Sans Mono', 'Monaco', monospace
 
 $z-index-1:   100
@@ -30,9 +30,10 @@ $z-index-10: 1000
 // -------------
 
 $colors: (dark: ($gray-dark, $dark-invert), primary: ($primary, $primary-invert), blue: ($blue, $blue-invert), green: ($green, $green-invert), yellow: ($yellow, $yellow-invert), red: ($red, $red-invert))
-$text-color: $gray
-$link-color: $primary
-$link-color-hover: darken($link-color, 10%)
+$core-text-color: $gray
+$core-meta-color: $gray-lighter
+$core-link-color: $primary
+$core-blank-bg: #f8f8f8
 
 // Typography
 // -------------
