WIP Refactor of variable names and classes

--- a/src/components/_card.sass
+++ b/src/components/_card.sass
@@ -59,7 +59,7 @@
   max-width: 100%
   position: relative
   width: 100%
-  border-radius: $global-radius
+  border-radius: $core-radius
 
   .media:not(:last-child)
     margin-bottom: 1rem
