--- a/src/components/_form.sass
+++ b/src/components/_form.sass
@@ -14,7 +14,7 @@ select
   appearance: none
   background-color: transparent
   border: .1rem solid $gray-lightest
-  border-radius: $global-radius
+  border-radius: $core-radius
   box-shadow: none
   height: 3.8rem
   padding: .6rem 1rem
