--- a/src/components/_hero.sass
+++ b/src/components/_hero.sass
@@ -30,6 +30,11 @@
 
 .hero-buttons
   margin-top: 2rem
+
+  .btn,
+  button
+    margin-right: 2rem
+
   +media(mobile)
     .button
       display: block
@@ -38,7 +43,6 @@
         margin-bottom: 1rem
   +media(tablet)
     display: flex
-    justify-content: center
 
     .button:not(:last-child)
       margin-right: 2rem
