--- a/src/components/_media.sass
+++ b/src/components/_media.sass
@@ -1,6 +1,6 @@
 .media-number
   background: $white
-  border-radius: $global-radius
+  border-radius: $core-radius
   display: inline-block
   font-size: 1.6rem
   height: 3.2rem
