--- a/src/components/_menu.sass
+++ b/src/components/_menu.sass
@@ -5,7 +5,7 @@
 
 .menu-list
   a
-    border-radius: $global-radius
+    border-radius: $core-radius
     color: $core-text-color
     display: block
     padding: .5rem 1rem
@@ -21,7 +21,7 @@
 
   li
     ul
-      border-left: .1rem solid $global-radius
+      border-left: .1rem solid $core-radius
       margin: 1rem
       padding-left: 1rem
 
