--- a/src/components/_navigation.sass
+++ b/src/components/_navigation.sass
@@ -103,7 +103,7 @@ a.nav-item
   align-items: stretch
   background-color: $white
   display: flex
-  min-height: $header-height
+  min-height: $core-header-height
   position: relative
   text-align: center
   z-index: $z-index-2
@@ -111,7 +111,7 @@ a.nav-item
   & > .container
     align-items: stretch
     display: flex
-    min-height: $header-height
+    min-height: $core-header-height
     width: 100%
 
     & > .nav-left
