--- a/src/components/_tabs.sass
+++ b/src/components/_tabs.sass
@@ -54,7 +54,7 @@
   &.is-boxed
     a
       border: .1rem solid transparent
-      border-radius: $global-radius $global-radius 0 0
+      border-radius: $core-radius $core-radius 0 0
       padding: .5rem 1.5rem
 
       &:hover
@@ -95,11 +95,11 @@
 
       &:first-child
         a
-          border-radius: $global-radius 0 0 $global-radius
+          border-radius: $core-radius 0 0 $core-radius
 
       &:last-child
         a
-          border-radius: 0 $global-radius $global-radius 0
+          border-radius: 0 $core-radius $core-radius 0
 
       &.is-active
         a
