--- a/src/components/_titles.sass
+++ b/src/components/_titles.sass
@@ -10,9 +10,6 @@
   font-size: 3.6rem
   line-height: 1.2
 
-  strong
-    color: inherit
-
   code
     display: inline-block
     font-size: inherit
@@ -23,11 +20,8 @@
   & + .highlight
     margin-top: -1rem
 
-  &.is-normal
+  &.light
     font-weight: 400
-
-    strong
-      font-weight: 700
 
   @each $size in $sizes
     $i: index($sizes, $size)
@@ -39,16 +33,16 @@
         font-size: nth($sizes, min($i + 1, 6))
 
 .subtitle
-  font-size: 1.8rem
+  font-size: 1.4rem
   font-weight: 400
-  line-height: 1.125
+  line-height: $core-lineheight
 
   strong
-    color: $secondary
+    color: $gray-lighter
     font-weight: 700
 
   code
-    border-radius: $global-radius
+    border-radius: $core-radius
     display: inline-block
     font-size: 1rem
     padding: .2rem .3rem
@@ -68,6 +62,6 @@
 
     &.s-#{$i}
       font-size: $size
-      
+
       code
         font-size: nth($sizes, min($i + 1, 6))
