--- a/src/components/_tooltips.sass
+++ b/src/components/_tooltips.sass
@@ -4,7 +4,7 @@
 
   &::after
     background: transparentize($black, .3)
-    border-radius: $global-radius
+    border-radius: $core-radius
     bottom: 100%
     color: $initial
     content: attr(data-tooltip)
