--- a/src/core/_base.sass
+++ b/src/core/_base.sass
@@ -8,13 +8,13 @@
 
 html
   box-sizing: border-box
-  font: $global-font-size $body-font-family
-  line-height: $global-lineheight
+  font: $core-font-size $sans-font-family
+  line-height: $core-lineheight
 
 // Default body styles
 body
   margin: 0
-  background: $body-background-color
+  background: $core-bg-color
   color: $core-text-color
   font-size: 1.6rem
 
