--- a/src/core/_color.sass
+++ b/src/core/_color.sass
@@ -1,26 +1,24 @@
 // Color
 
+$black: #0a0a0a
 $gray-darker: #111
 $gray-dark: #333
 $gray: #444
 $gray-light: #666
 $gray-lighter: #999
 $gray-lightest: #e0e0e0
-
-$black: #0a0a0a
-$white: #fff
 $faded: #f9f9f9
-$blue: #42afe3
-$green: #97cd76
-$purple: #847bb9
-$red: #ed6c63
-$yellow: #fce473
+$white: #fff
+
+$blue: #09c
+$green: #0c6
+$purple: #96c
+$red: #f66
+$yellow: #fc3
+$orange: #f93
 
 $initial: $white
-$primary: #536dfe
-$secondary: #8f979e
-$tertiary: #f4f5f6
-$quaternary: #d1d1d1
+$primary: #53f
 
 $dark-invert: find-color-invert($gray-dark)
 $primary-invert: find-color-invert($primary)
@@ -28,3 +26,4 @@ $blue-invert: find-color-invert($blue)
 $green-invert: find-color-invert($green)
 $yellow-invert: find-color-invert($yellow)
 $red-invert: find-color-invert($red)
+$orange-invert: find-color-invert($orange)
