--- a/src/components/_blank.sass
+++ b/src/components/_blank.sass
@@ -1,16 +1,16 @@
 // Blank slates
 .blank
   background: $core-blank-bg
-  border-radius: $global-radius
+  border-radius: $core-radius
   text-align: center
   padding: 2rem
 
   .blank-title
-    font-size: 1.8rem
+    font-size: $size-medium
     margin: 1.5rem 0 .2rem 0
 
   .blank-meta
-    font-size: 1.4rem
+    font-size: $size-small
     color: $core-meta-color
 
   .blank-action
