--- a/src/components/_button.sass
+++ b/src/components/_button.sass
@@ -10,7 +10,7 @@ input[type='submit']
   background-color: $gray-lightest
   border: .1rem solid
   border-color: $gray-lightest
-  border-radius: $global-radius
+  border-radius: $core-radius
   color: $gray
   cursor: pointer
   display: inline-block
@@ -21,6 +21,7 @@ input[type='submit']
   line-height: 3.8rem
   opacity: 1
   padding: 0 3rem
+  transition: all .15s ease
   text-align: center
   text-decoration: none
   text-transform: uppercase
@@ -36,6 +37,9 @@ input[type='submit']
   &.disabled,
   &[disabled]
     cursor: default
+    background-color: $gray-light
+    border-color: $gray-light
+    color: $gray
     opacity: .5
 
     &:hover,
@@ -64,6 +68,13 @@ input[type='submit']
       border-color: transparent
       color: inherit
 
+  &.btn-raised
+    box-shadow: 0 4px 6px rgba(50,50,93,.11), 0 1px 3px rgba(0,0,0,.08)
+
+    &:hover
+      transform: translateY(-1px)
+      box-shadow: 0 7px 14px rgba(50,50,93,.1), 0 3px 6px rgba(0,0,0,.08)
+
   &.btn-sm
     font-size: .8rem
     height: 2.8rem
@@ -80,6 +91,9 @@ input[type='submit']
     display: block
     width: 100%
 
+  &.btn-narrow
+    padding: 0 1.5rem
+
   // Set styles for each colors defined in _Variables.sass
   @each $name, $pair in $colors
     $color: nth($pair, 1)
@@ -92,7 +106,7 @@ input[type='submit']
 
       &:hover,
       &:focus
-        background: adjust-hue($color, 10%)
+        background: lighten($color, 4%)
         border-color: transparent
         color: $color-invert
 
