--- a/src/components/_code.sass
+++ b/src/components/_code.sass
@@ -1,6 +1,6 @@
 code
   background: $gray-lightest
-  border-radius: $global-radius
+  border-radius: $core-radius
   font-size: 86%
   margin: 0 .2rem
   padding: .2rem .5rem
@@ -9,7 +9,7 @@ code
 pre
   background: $faded
   border-left: .3rem solid $primary
-  border-radius: $global-radius
+  border-radius: $core-radius
   font-family: $monospace-font-family
   box-shadow: 0 .1rem .2rem transparentize($black, .8)
 
