--- a/src/core/_reset.sass
+++ b/src/core/_reset.sass
@@ -1,8 +1,9 @@
-/*! normalize.css v4.2.0 | MIT License | github.com/necolas/normalize.css */
+// Reset
+// Based on normalize.css v4.2.0 | MIT License | github.com/necolas/normalize.css
 
 html
-  font-family: sans-serif
-  line-height: 1.15
+  font-family: $sans-font-family
+  line-height: $core-lineheight
 
 body
   margin: 0
