--- a/src/components/_blank.sass
+++ b/src/components/_blank.sass
@@ -3,11 +3,11 @@
   background: $core-blank-bg
   border-radius: $core-radius
   text-align: center
-  padding: 2rem
+  padding: 4rem
 
   .blank-title
     font-size: $size-medium
-    margin: 1.5rem 0 .2rem 0
+    margin-bottom: .2rem
 
   .blank-meta
     font-size: $size-small
