--- a/src/components/_button.sass
+++ b/src/components/_button.sass
@@ -6,11 +6,10 @@ button,
 input[type='button'],
 input[type='reset'],
 input[type='submit']
-  margin-bottom: 1rem
   background-color: $gray-lightest
   border: .1rem solid
   border-color: $gray-lightest
-  border-radius: $core-radius
+  border-radius: $core-radius-inner
   color: $gray
   cursor: pointer
   display: inline-block
