--- a/src/components/_dropdown.sass
+++ b/src/components/_dropdown.sass
@@ -35,8 +35,8 @@
   display: block
   visibility: hidden
   position: absolute
-  top: $core-header-height
-  background-color: $initial
+  top: $core-header-height + 0.1rem
+  background-color: $white
   margin-top: -.3rem
   min-width: 16rem
   max-height: 50vh
@@ -46,7 +46,7 @@
   opacity: 0
   border: .1rem solid rgba(0, 0, 0, .1)
   border-radius: $core-radius
-  box-shadow: 0 .1rem .2rem 0 rgba(0, 0, 0, .1)
+  box-shadow: 0 .4rem 1.2rem rgba(0, 0, 0, .1)
   transition: visibility 0s .15s, opacity .15s, margin-top .15s
 
   li
