--- a/src/components/_hero.sass
+++ b/src/components/_hero.sass
@@ -1,5 +1,4 @@
 // Hero
-// ----
 
 .hero-video
   +overlay
@@ -52,8 +51,8 @@
   text-align: center
 
   .header
-    background: none
-    box-shadow: none
+    background: rgba($black, .1)
+    box-shadow: 0 .1rem 0 rgba($black, .2)
 
     img
       height: 2rem
@@ -106,7 +105,7 @@
 
       .header
         .container
-          box-shadow: 0 1px 0 transparentize($color-invert, .8)
+          //box-shadow: 0 1px 0 transparentize($color-invert, .8)
 
       .header-icon,
       .header-item > a:not(.button),
