--- a/src/core/_reset.sass
+++ b/src/core/_reset.sass
@@ -2,8 +2,8 @@
 // Based on normalize.css v4.2.0 | MIT License | github.com/necolas/normalize.css
 
 html
-  font-family: $sans-font-family
-  line-height: $core-lineheight
+  font-family: sans-serif
+  line-height: 1.65
 
 body
   margin: 0
