--- a/src/components/_card.sass
+++ b/src/components/_card.sass
@@ -1,69 +1,48 @@
-.card-header
-  align-items: stretch
-  box-shadow: 0 .1rem .2rem rgba($black, .1)
-  display: flex
-  min-height: 4rem
-
-.card-header-title
-  align-items: flex-start
-  display: flex
-  flex: 1
-  font-weight: 700
-  padding: 1rem
-
-.card-header-icon
-  align-items: center
-  cursor: pointer
-  display: flex
-  justify-content: center
-  width: 4rem
-
-.card-image
-  display: block
-  position: relative
-
-.card-content
-  padding: 2rem
-
-  .title + .subtitle
-    margin-top: -2rem
-    margin-bottom: 0
-
-.card-footer
-  border-top: .1rem solid $gray-lightest
-  align-items: stretch
-  display: flex
-
-.card-footer-item
-  align-items: center
-  display: flex
-  flex: 1
-  justify-content: center
-  padding: 1rem
-  font-size: 1.1rem
-  font-weight: 700
-  height: 3.8rem
-  letter-spacing: .1rem
-  line-height: 3.8rem
-  padding: 0 3rem
-  text-align: center
-  text-decoration: none
-  text-transform: uppercase
-
-  &:not(:last-child)
-    border-right: .1rem solid $gray-lightest
-
+// Cards
 .card
-  background-color: $white
-  box-shadow: 0 .2rem .3rem rgba($black, .1), 0 0 0 .1rem rgba($black, .1)
-  max-width: 100%
-  position: relative
-  width: 100%
+  background: #fff
+  border: .1rem solid $core-border-color
   border-radius: $core-radius
+  display: block
+  margin: 0
+  padding: 0
+  text-align: left
+  z-index: $z-index-10
 
-  .media:not(:last-child)
-    margin-bottom: 1rem
-    
-  // Modifiers
-  &.fullwidth
-    width: 100%
+  .card-header,
+  .card-body,
+  .card-footer
+    padding: 1.5rem 1.5rem 0 1.5rem
+
+    &:last-child
+      padding-bottom: 1.5rem
+
+  .card-header
+
+    .title
+      margin: 0
+      color: $gray
+      font-weight: 400
+
+    .subtitle
+      margin: 0
+      color: $gray-lighter
+      font-weight: 700
+
+  .card-body
+    font-size: $size-small
+
+  .card-image
+    padding-top: 1.5rem
+
+    &:first-child
+      padding-top: 0
+
+      img
+        border-top-left-radius: .3rem
+        border-top-right-radius: .3rem
+
+    &:last-child
+      img
+        border-bottom-left-radius: .3rem
+        border-bottom-right-radius: .3rem
