--- a/src/components/_titles.sass
+++ b/src/components/_titles.sass
@@ -1,27 +1,26 @@
-
 // Titles
 
-.title,
-.subtitle
+// Inheritances
+//
+%title,
+%subtitle
   &:not(:last-child)
     margin-bottom: 2rem
 
+%code
+  display: inline-block
+  font-size: inherit
+
 .title
+  @extend %title
   font-size: 3.6rem
   line-height: 1.2
 
   code
-    display: inline-block
-    font-size: inherit
+    @extend %code
 
   & + .subtitle
     margin-top: -1rem
-
-  & + .highlight
-    margin-top: -1rem
-
-  &.light
-    font-weight: 400
 
   @each $size in $sizes
     $i: index($sizes, $size)
@@ -33,6 +32,7 @@
         font-size: nth($sizes, min($i + 1, 6))
 
 .subtitle
+  @extend %subtitle
   font-size: 1.4rem
   font-weight: 400
   line-height: $core-lineheight
@@ -42,20 +42,10 @@
     font-weight: 700
 
   code
+    @extend %code
     border-radius: $core-radius
-    display: inline-block
-    font-size: 1rem
     padding: .2rem .3rem
     vertical-align: top
-
-  & + .text
-    margin-top: 2rem
-
-  &.is-normal
-    font-weight: 400
-
-    strong
-      font-weight: 700
 
   @each $size in $sizes
     $i: index($sizes, $size)
