--- a/src/components/_tooltips.sass
+++ b/src/components/_tooltips.sass
@@ -6,7 +6,7 @@
     background: transparentize($black, .3)
     border-radius: $core-radius
     bottom: 100%
-    color: $initial
+    color: $white
     content: attr(data-tooltip)
     display: block
     font-size: 1.2rem
