--- a/src/core/_grid.sass
+++ b/src/core/_grid.sass
@@ -14,11 +14,12 @@
   position: relative
   width: 100%
 
-// Using flexbox for the grid, inspired by Philip Walton:
-// http://philipwalton.github.io/solved-by-flexbox/demos/grids/
-// By default each .column within a .row will evenly take up
-// available width, and the height of each .column with take
-// up the height of the tallest .column in the same .row.
+// Using flexbox for the grid, inspired by Milligram:
+// https://milligram.github.io/
+// By default each .col within a .row will evenly take up
+// available width, and the height of each .col with take
+// up the height of the tallest .col in the same .row.
+
 .row
   display: flex
   flex-direction: column
@@ -28,31 +29,24 @@
   &.row-wrap
     flex-wrap: wrap
 
-  .row-no-padding
-    padding: 0
-
-    & > .col
-      padding: 0
-
   & + .row
-    margin-top: -.5rem
-    padding-top: 0
+    margin-top: 2rem
 
   // Vertically Align Columns
   // .row-* vertically aligns every .col in the .row
-  .row-top
+  &.row-top
     align-items: flex-start
 
-  .row-bottom
+  &.row-bottom
     align-items: flex-end
 
-  .row-center
+  &.row-center
     align-items: center
 
-  .row-stretch
+  &.row-stretch
     align-items: stretch
 
-  .row-baseline
+  &.row-baseline
     align-items: baseline
 
   .col
@@ -62,97 +56,35 @@
     max-width: 100%
     width: 100%
 
+    & + .col
+      margin-bottom: 2rem
+
     // .col-* vertically aligns an individual .col
-    .col-top
+    &.col-top
       align-self: flex-start
 
-    .col-bottom
+    &.col-bottom
       align-self: flex-end
 
-    .col-center
+    &.col-center
       align-self: center
-
-    // Column Offsets
-    &.col-o-10
-      margin-left: 10%
-
-    &.col-o-20
-      margin-left: 20%
-
-    &.col-o-25
-      margin-left: 25%
-
-    &.col-o-33,
-    &.col-o-34
-      margin-left: 33.3333%
-
-    &.col-o-50
-      margin-left: 50%
-
-    &.col-o-66,
-    &.col-o-67
-      margin-left: 66.6666%
-
-    &.col-o-75
-      margin-left: 75%
-
-    &.col-o-80
-      margin-left: 80%
-
-    &.col-o-90
-      margin-left: 90%
 
     // Explicit Column Percent Sizes
     // By default each grid column will evenly distribute
     // across the grid. However, you can specify individual
     // columns to take up a certain size of the available area
-    &.col-10
-      flex: 0 0 10%
-      max-width: 10%
+    // Column offsets are defined with the .col-o-X class
 
-    &.col-20
-      flex: 0 0 20%
-      max-width: 20%
+    @each $name, $size in $grid-sizes
+      &.col-#{$name}
+        flex: 0 0 $size
+        max-width: $size
 
-    &.col-25
-      flex: 0 0 25%
-      max-width: 25%
-
-    &.col-33,
-    &.col-34
-      flex: 0 0 33.3333%
-      max-width: 33.3333%
-
-    &.col-40
-      flex: 0 0 40%
-      max-width: 40%
-
-    &.col-50
-      flex: 0 0 50%
-      max-width: 50%
-
-    &.col-60
-      flex: 0 0 60%
-      max-width: 60%
-
-    &.col-66,
-    &.col-67
-      flex: 0 0 66.6666%
-      max-width: 66.6666%
-
-    &.col-75
-      flex: 0 0 75%
-      max-width: 75%
-
-    &.col-80
-      flex: 0 0 80%
-      max-width: 80%
-
-    &.col-90
-      flex: 0 0 90%
-      max-width: 90%
+      &.col-o-#{$name}
+        margin-left: $size
 
     // Responsive Column Sizes
+
     &.col-sm
       +media(mobile)
         flex: 1
@@ -160,6 +92,7 @@
         width: 100%
 
 // Larger than mobile screen
+
 +media(tablet)
   .row
     flex-direction: row
