--- a/src/core/_variables.sass
+++ b/src/core/_variables.sass
@@ -10,11 +10,11 @@
 $core-ns: 'gs'
 
 $core-font-size: 62.5%
-$core-width: 94.5rem
+$core-width: 106rem
 $core-lineheight: 1.65
-$core-bg-color: $faded
 $core-header-height: 5rem
 $core-radius: .3rem
+$core-radius-inner: .2rem
 
 $z-index-1:   100
 $z-index-2:   200
@@ -27,15 +27,64 @@ $z-index-8:   800
 $z-index-9:   900
 $z-index-10: 1000
 
-// Color
+// Core Color
 // -------------
 
-$colors: (dark: ($gray-dark, $dark-invert), primary: ($primary, $primary-invert), blue: ($blue, $blue-invert), green: ($green, $green-invert), yellow: ($yellow, $yellow-invert), red: ($red, $red-invert), orange: ($orange, $orange-invert))
+$black: #0a0a0a
+$gray-darker: #222831
+$gray-dark: #303841
+$gray: #444
+$gray-light: #666
+$gray-lighter: #999
+$gray-lightest: #ECECEC
+$faded: #f9f9f9
+$white: #fff
 
+$blue: #09c
+$green: #3FC380
+$purple: #96c
+$red: #f66
+$yellow: #fc3
+$orange: #f93
+$primary: #5357A6
+
+// TODO: Place under functions
+$initial: $white
+
+$dark-invert: find-color-invert($gray-dark)
+$primary-invert: find-color-invert($primary)
+$blue-invert: find-color-invert($blue)
+$green-invert: find-color-invert($green)
+$yellow-invert: find-color-invert($yellow)
+$red-invert: find-color-invert($red)
+$orange-invert: find-color-invert($orange)
+
+$colors: ( dark: ($gray-dark, $dark-invert), primary: ($primary, $primary-invert), blue: ($blue, $blue-invert), green: ($green, $green-invert), yellow: ($yellow, $yellow-invert), red: ($red, $red-invert), orange: ($orange, $orange-invert))
+
+$core-bg-color: $faded
 $core-text-color: $gray
 $core-meta-color: $gray-lighter
 $core-link-color: $primary
-$core-blank-bg: #f8f8f8
+$core-border-color: $gray-lightest
+$core-blank-bg: $gray-lightest
+
+// Grid
+// We recommend not touching these values unless you know what you are doing.
+// --------------------------------------------------------------------------
+
+$core-grid-size-10: 10%
+$core-grid-size-20: 20%
+$core-grid-size-25: 25%
+$core-grid-size-33: 33.3333%
+$core-grid-size-40: 40%
+$core-grid-size-50: 50%
+$core-grid-size-60: 60%
+$core-grid-size-66: 66.6666%
+$core-grid-size-75: 75%
+$core-grid-size-80: 80%
+$core-grid-size-90: 90%
+
+$grid-sizes: ( 10: ($core-grid-size-10), 20: ($core-grid-size-20), 25: ($core-grid-size-25), 33: ($core-grid-size-33), 40: ($core-grid-size-40), 50: ($core-grid-size-50), 60: ($core-grid-size-60), 66: ($core-grid-size-66), 75: ($core-grid-size-75), 80: ($core-grid-size-80), 90: ($core-grid-size-90))
 
 // Typography
 // -------------
