--- a/src/ghast.sass
+++ b/src/ghast.sass
@@ -2,34 +2,32 @@
 // Sass Modules
 // ––––––––––––––––––––––––––––––––––––––––––––––––––
 
-// Import normalize.css
-@import base/reset
-
 // Important functions to be used in other files.
-@import base/functions
+@import core/functions
+
+// Import variables
+@import core/variables
+
+// Import normalize.css
+@import core/reset
 
 // Import core components.
-@import base/color
-@import base/variables
-@import base/mixins
+@import core/mixins
+@import core/base
+@import core/grid
+@import core/images
+@import core/typography
 
 // Import all components.
-@import base/base
-@import base/grid
-@import base/images
-@import base/typography
+@import components/badge
 @import components/blank
-@import components/blockquote
 @import components/button
 @import components/card
-@import components/code
 @import components/footer
 @import components/form
 @import components/header
 @import components/hero
 @import components/dropdown
-@import components/link
-@import components/list
 @import components/media
 @import components/menu
 @import components/switches
