--- a/src/components/_badge.sass
+++ b/src/components/_badge.sass
@@ -9,11 +9,11 @@
   display: inline-block
   height: 2.2rem
   padding: 0 .5rem
-  background-color: $gray-lightest
+  background-color: $grey-lightest
   border: .1rem solid
-  border-color: $gray-lightest
+  border-color: $grey-lightest
   border-radius: $core-radius
-  color: $gray
+  color: $grey
   font-size: 1.2rem
   font-weight: 700
   line-height: 2.2rem
