--- a/src/components/_blank.sass
+++ b/src/components/_blank.sass
@@ -6,12 +6,12 @@
   padding: 4rem
 
   .blank-title
-    font-size: $size-medium
+    font-size: $type-size-medium
     margin-bottom: .2rem
 
   .blank-meta
-    font-size: $size-small
-    color: $core-meta-color
+    font-size: $type-size-small
+    color: $grey-500
 
   .blank-action
     margin-top: 1rem
