--- a/src/components/_blockquote.sass
+++ b/src/components/_blockquote.sass
@@ -4,9 +4,9 @@
 blockquote
   margin: 0
   padding: 1rem 0 .5rem 1.75rem
-  color: $gray-light
+  color: $grey-light
   font-style: italic
-  border-left: .5rem solid $gray-lightest
+  border-left: .5rem solid $grey-lightest
 
   cite
-    color: $gray-lighter
+    color: $grey-lighter
