--- a/src/components/_card.sass
+++ b/src/components/_card.sass
@@ -21,16 +21,16 @@
 
     .title
       margin: 0
-      color: $gray
+      color: $grey
       font-weight: 400
 
     .subtitle
       margin: 0
-      color: $gray-lighter
+      color: $grey-lighter
       font-weight: 700
 
   .card-body
-    font-size: $size-small
+    font-size: $type-size-small
 
   .card-image
     padding-top: 1.5rem
