--- a/src/components/_dropdown.sass
+++ b/src/components/_dropdown.sass
@@ -40,7 +40,7 @@
   margin-top: -.3rem
   min-width: 16rem
   max-height: 50vh
-  font-size: $size-small
+  font-size: $type-size-small
   list-style: none
   text-align: left
   opacity: 0
@@ -53,14 +53,14 @@
     margin: 0
 
     a
-      color: $gray
+      color: $grey
       padding: 1rem 1.8rem
       text-decoration: none
       display: block
 
       &:hover
         color: $primary
-        background: $faded
+        background: $grey-1000
 
 .dropdown-content::-webkit-scrollbar
   width: .4rem
