--- a/src/components/_header.sass
+++ b/src/components/_header.sass
@@ -63,7 +63,7 @@
     vertical-align: middle
 
   a:not(.btn)
-    color: $gray
+    color: $grey
 
     &:hover
       color: $primary
@@ -74,7 +74,7 @@
 .header-tab
   align-items: center
   border-bottom: 1px solid transparent
-  color: $gray
+  color: $grey
   display: block
   height: $core-header-height
   line-height: 24px
