--- a/src/components/_menu.sass
+++ b/src/components/_menu.sass
@@ -11,7 +11,7 @@
     padding: .5rem 1rem
 
     &:hover
-      background-color: $gray-lightest
+      background-color: $grey-lightest
       color: $core-link-color
 
     // Modifiers
@@ -26,8 +26,8 @@
       padding-left: 1rem
 
 .menu-label
-  color: $gray-lightest
-  font-size: $size-small
+  color: $grey-lightest
+  font-size: $type-size-small
   letter-spacing: .1rem
   margin-bottom: .5rem
   text-transform: uppercase
