--- a/src/components/_navigation.sass
+++ b/src/components/_navigation.sass
@@ -31,7 +31,7 @@
 
 .nav-item a,
 a.nav-item
-  color: $gray
+  color: $grey
 
   &:hover
     color: $primary
@@ -69,7 +69,7 @@ a.nav-item
     position: absolute
 
     .nav-item
-      border-top: .1rem solid rgba($gray-lightest, .5)
+      border-top: .1rem solid rgba($grey-lightest, .5)
       padding: 1rem
 
     &.active
