--- a/src/components/_switches.sass
+++ b/src/components/_switches.sass
@@ -11,8 +11,8 @@
   .switch-icon
     line-height: 2.4rem
     vertical-align: top
-    border: .1rem solid $gray-lightest
-    background: $gray-lightest
+    border: .1rem solid $grey-lightest
+    background: $grey-lightest
     display: inline-block
     width: 4rem
     height: 2.2rem
