--- a/src/components/_tabs.sass
+++ b/src/components/_tabs.sass
@@ -6,8 +6,8 @@
   white-space: nowrap
 
   a
-    border-bottom: .1rem solid $gray-lightest
-    color: $gray
+    border-bottom: .1rem solid $grey-lightest
+    color: $grey
     display: block
     margin-bottom: -.1rem
     padding: .5rem 0
@@ -15,7 +15,7 @@
     vertical-align: top
 
     &:hover
-      border-bottom-color: $gray
+      border-bottom-color: $grey
       color: $primary
 
   li
@@ -32,7 +32,7 @@
         color: $primary
 
   ul
-    border-bottom: .1rem solid $gray-lightest
+    border-bottom: .1rem solid $grey-lightest
     display: flex
 
   &.is-centered
@@ -58,8 +58,8 @@
       padding: .5rem 1.5rem
 
       &:hover
-        background: $gray-lightest
-        border-bottom-color: $gray-lightest
+        background: $grey-lightest
+        border-bottom-color: $grey-lightest
 
     li
       & + li
@@ -68,7 +68,7 @@
       &.is-active
         a
           background: $white
-          border-color: $gray-lightest
+          border-color: $grey-lightest
           border-bottom-color: transparent
 
     &.is-centered
@@ -79,13 +79,13 @@
 
   &.is-toggle
     a
-      border: .1rem solid $gray-lightest
+      border: .1rem solid $grey-lightest
       margin-bottom: 0
       padding: .5rem 1rem
       position: relative
 
       &:hover
-        background: $gray-lightest
+        background: $grey-lightest
         border-color: $primary
         z-index: 2
 
