--- a/src/core/_base.sass
+++ b/src/core/_base.sass
@@ -8,7 +8,7 @@
 
 html
   box-sizing: border-box
-  font: $core-font-size $sans-font-family
+  font: $core-font-size $type-font-sans
   line-height: $core-lineheight
 
 body
