--- a/src/components/_hero.sass
+++ b/src/components/_hero.sass
@@ -47,7 +47,7 @@
       margin-right: 2rem
 
 .hero
-  background: $faded
+  background: $grey-1000
   text-align: center
 
   .header
@@ -69,7 +69,7 @@
       +media(mobile)
         box-shadow: none
       padding: 0
-      box-shadow: 0 .1rem 0 transparentize($gray, .8)
+      box-shadow: 0 .1rem 0 transparentize($grey, .8)
 
   .tabs
     a
@@ -83,8 +83,8 @@
     letter-spacing: normal
 
   &.alt
-    background: $faded
-    color: $gray
+    background: $grey-1000
+    color: $grey
   @each $name, $pair in $colors
     $color: nth($pair, 1)
     $color-invert: nth($pair, 2)
