--- a/src/components/_media.sass
+++ b/src/components/_media.sass
@@ -33,7 +33,7 @@
     margin-bottom: 1rem
 
   .media
-    border-top: .1rem solid rgba($gray-lightest, .5)
+    border-top: .1rem solid rgba($grey-lightest, .5)
     display: flex
     padding-top: 1rem
 
@@ -49,7 +49,7 @@
         margin-top: .5rem
 
   & + .media
-    border-top: .1rem solid rgba($gray-lightest, .5)
+    border-top: .1rem solid rgba($grey-lightest, .5)
     margin-top: 1rem
     padding-top: 1rem
 
