--- a/src/core/_grid.sass
+++ b/src/core/_grid.sass
@@ -1,6 +1,35 @@
-// Grid
+// Name:            Grid
+// Description:     Styles for the grid system
+//
+// Namespace:       `grid`
+//
+// Modifiers:       `component-modifier`
+//
+// States:          `component-state`
+//
+// ========================================================================
 
-// .container is main centered wrapper with a max width defined in _variables.sass
+
+// Variables
+// ========================================================================
+
+$grid-size-10: 10%
+$grid-size-20: 20%
+$grid-size-25: 25%
+$grid-size-33: 33.3333%
+$grid-size-40: 40%
+$grid-size-50: 50%
+$grid-size-60: 60%
+$grid-size-66: 66.6666%
+$grid-size-75: 75%
+$grid-size-80: 80%
+$grid-size-90: 90%
+
+$grid-sizes: ( 10: ($grid-size-10), 20: ($grid-size-20), 25: ($grid-size-25), 33: ($grid-size-33), 40: ($grid-size-40), 50: ($grid-size-50), 60: ($grid-size-60), 66: ($grid-size-66), 75: ($grid-size-75), 80: ($grid-size-80), 90: ($grid-size-90))
+
+// Component: Grid
+// ========================================================================
+
 .container
   +media(desktop)
     &.fluid
@@ -80,7 +109,7 @@
         flex: 0 0 $size
         max-width: $size
 
-      &.col-o-#{$name}
+      &.col-offset-#{$name}
         margin-left: $size
 
     // Responsive Column Sizes
