--- a/src/core/_variables.sass
+++ b/src/core/_variables.sass
@@ -1,13 +1,8 @@
-// Settings
-
-// Global
-// ---------
-// Global variables are namespaced with the g- prefix
+// Globals
+// ========================================================================
+// Global variables are namespaced with the core- prefix
 // The base font-size is set at 62.5% for having the convenience
 // of sizing rems in a way that is similar to using px. 1.6rem=16px
-
-// Global namespace for Ghast objects
-$core-ns: 'gs'
 
 $core-font-size: 62.5%
 $core-width: 106rem
@@ -15,6 +10,9 @@ $core-lineheight: 1.65
 $core-header-height: 5rem
 $core-radius: .3rem
 $core-radius-inner: .2rem
+
+// Z-Index Scale
+// ========================================================================
 
 $z-index-1:   100
 $z-index-2:   200
@@ -27,19 +25,33 @@ $z-index-8:   800
 $z-index-9:   900
 $z-index-10: 1000
 
-// Core Color
-// -------------
+// Core Colour
+// ========================================================================
 
+/* Greys
+   Scale is similar to z-index. Lower number is darker */
 $black: #0a0a0a
-$gray-darker: #222831
-$gray-dark: #303841
-$gray: #444
-$gray-light: #666
-$gray-lighter: #999
-$gray-lightest: #ECECEC
-$faded: #f9f9f9
-$white: #fff
+$grey-100: #222831
+$grey-200: #303841
+$grey-300: #444
+$grey-400: #666
+$grey-500: #999
+$grey-600: #BBB
+$grey-700: #DDD
+$grey-800: #E0E0E0
+$grey-900: #EEE
+$grey-1000: #F9F9F9
+$white: #FFF
 
+$grey-darker: $grey-100
+$grey-dark: $grey-200
+$grey: $grey-300
+$grey-light: $grey-600
+$grey-lighter: $grey-700
+$grey-lightest: $grey-800
+
+
+/* Accent Colours */
 $blue: #09c
 $green: #3FC380
 $purple: #96c
@@ -48,10 +60,9 @@ $yellow: #fc3
 $orange: #f93
 $primary: #5357A6
 
-// TODO: Place under functions
 $initial: $white
 
-$dark-invert: find-color-invert($gray-dark)
+$dark-invert: find-color-invert($grey-dark)
 $primary-invert: find-color-invert($primary)
 $blue-invert: find-color-invert($blue)
 $green-invert: find-color-invert($green)
@@ -59,53 +70,11 @@ $yellow-invert: find-color-invert($yellow)
 $red-invert: find-color-invert($red)
 $orange-invert: find-color-invert($orange)
 
-$colors: ( dark: ($gray-dark, $dark-invert), primary: ($primary, $primary-invert), blue: ($blue, $blue-invert), green: ($green, $green-invert), yellow: ($yellow, $yellow-invert), red: ($red, $red-invert), orange: ($orange, $orange-invert))
+$colors: ( dark: ($grey-dark, $dark-invert), primary: ($primary, $primary-invert), blue: ($blue, $blue-invert), green: ($green, $green-invert), yellow: ($yellow, $yellow-invert), red: ($red, $red-invert), orange: ($orange, $orange-invert))
 
-$core-bg-color: $faded
-$core-text-color: $gray
-$core-meta-color: $gray-lighter
+$core-bg-color: $grey-1000
+$core-text-color: $grey
+$core-meta-color: $grey-lighter
 $core-link-color: $primary
-$core-border-color: $gray-lightest
-$core-blank-bg: $gray-lightest
-
-// Grid
-// We recommend not touching these values unless you know what you are doing.
-// --------------------------------------------------------------------------
-
-$core-grid-size-10: 10%
-$core-grid-size-20: 20%
-$core-grid-size-25: 25%
-$core-grid-size-33: 33.3333%
-$core-grid-size-40: 40%
-$core-grid-size-50: 50%
-$core-grid-size-60: 60%
-$core-grid-size-66: 66.6666%
-$core-grid-size-75: 75%
-$core-grid-size-80: 80%
-$core-grid-size-90: 90%
-
-$grid-sizes: ( 10: ($core-grid-size-10), 20: ($core-grid-size-20), 25: ($core-grid-size-25), 33: ($core-grid-size-33), 40: ($core-grid-size-40), 50: ($core-grid-size-50), 60: ($core-grid-size-60), 66: ($core-grid-size-66), 75: ($core-grid-size-75), 80: ($core-grid-size-80), 90: ($core-grid-size-90))
-
-// Typography
-// -------------
-
-$sans-font-family: -apple-system, BlinkMacSystemFont, 'San Francisco', 'Roboto', 'Segoe UI', 'Helvetica Neue', 'Lucida Grande', 'Oxygen', 'Ubuntu', 'Cantarell', sans-serif
-$monospace-font-family: 'Menlo', 'Consolas', 'Bitstream Vera Sans Mono', 'DejaVu Sans Mono', 'Monaco', monospace
-
-$size-1: 4.8rem
-$size-2: 4rem
-$size-3: 2.8rem
-$size-4: 2.4rem
-$size-5: 1.8rem
-$size-6: 1.6rem
-$size-7: 1.4rem
-$size-8: 1.1rem
-
-$size-tiny: $size-8
-$size-small: $size-7
-$size-normal: $size-6
-$size-medium: $size-5
-$size-large: $size-3
-$size-huge: $size-1
-
-$sizes: $size-1 $size-2 $size-3 $size-4 $size-5 $size-6 $size-7 $size-8
+$core-border-color: $grey-lightest
+$core-blank-bg: $grey-900
